Refactor SendEmailTask to improve import organization and code readability